using Domain.Entities;

namespace Domain.Interfaces
{
    public interface IIssueRequests
    {
        void IssueRequest(Request request);
    }
}